# cnwgrass

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
conda/: environment.yml  meta.yaml  meta.yml
doc/: conf.py  index.rst
doc/cnmetabolism/: index.rst  ref.rst  user.rst
doc/cnwheat/: user.rst
doc/elong/: index.rst  user.rst
doc/farquhar/: index.rst  user.rst
doc/fspm/: index.rst  ref.rst  user.rst
doc/gasexchange/: index.rst  ref.rst  user.rst
doc/growth/: index.rst  ref.rst  user.rst
doc/hydraulics/: index.rst  ref.rst  user.rst
doc/integration/: index.rst  ref.rst  user.rst
doc/morphogenesis/: index.rst  ref.rst  user.rst
doc/respiration/: index.rst  ref.rst  user.rst
doc/senesc/: user.rst
doc/senescence/: index.rst  ref.rst  user.rst
doc/turgor/: index.rst  ref.rst  user.rst
example/Farquhar_standalone/: elements_inputs.csv  main.py
example/NEMA/: main.py
example/NEMA/NEMA_H0/: main.py
example/NEMA/NEMA_H15/: main.py
example/NEMA/NEMA_H3/: main.py
example/Notebooks/: 01_simple_run_vegetative_stages.ipynb  02_multiple_scenarios.ipynb  03_simple_run_hydraulics.ipynb  main.py  simple_run_vegetative_stages.ipynb
example/Notebooks/inputs/: scenarios_list.csv
example/Scenarios_monoculms/: additional_graphs.py  additional_postprocessing.py  main.py  run_fspmwheat.py  tools.py
example/Scenarios_monoculms/inputs/: management_1.csv  management_2.csv  management_3.csv  management_4.csv  scenarios_list.csv
example/Scenarios_monoculms/inputs_Ljutovac_N2/: elements_initial_state.csv
example/Vegetative_stages/: main.py
example/Vegetative_stages_hydraulics/: main.py
example/Vegetative_stages_hydraulics/inputs/: elements_initial_state.csv  management.csv  soils_initial_state.csv
example/external soil model/: main.py
simulations/NEMA/NEMA_H0/: main.py
simulations/NEMA/NEMA_H3/: main.py
simulations/Notebooks/: 02_multiple_scenarios.ipynb  main.py
simulations/Notebooks/inputs/: meteo_file.csv  scenarios_list.csv
simulations/Scenarios_monoculms/: additional_graphs.py  main.py
simulations/Vegetative_stages/: main.py
simulations/Vegetative_stages/inputs/: create_init_MTG_FSPMWHEAT.py  create_init_MTG_FSPMWHEAT_with_tillers.py
src/openalea/cnwheat/: model.py  (+7 more)
test/: test_cnwgrass.py  test_wheatfspm.py
test/inputs/: hiddenzones_initial_state.csv
test/test_cnwheat/: test_cnwheat.py
test/test_elongwheat/: test_elongwheat.py
test/test_farquharwheat/: test_farquharwheat.py
test/test_fspmwheat/: test_fspmwheat.py
test/test_growthwheat/: test_growthwheat.py
test/test_respiwheat/: test_respiwheat.py
test/test_senescwheat/: test_senescwheat.py
turgorgrowth/: converter.py  model.py  parameters.py  postprocessing.py  simulation.py  tools.py
(+123 files in other folders)
